More error pages

--- a/web.config
+++ b/web.config
@@ -4,12 +4,39 @@
         <ipSecurity allowUnlisted="false" denyAction="Forbidden"></ipSecurity>
     </security>
      <httpErrors errorMode="Custom" allowAbsolutePathsWhenDelegated="true">
+         <remove statusCode="400" />
+         <error statusCode="400"
+            path="%HOME%\site\wwwroot\errors\400.html" />
+         <remove statusCode="401" />
+         <error statusCode="401"
+            path="%HOME%\site\wwwroot\errors\401.html" />
          <remove statusCode="403" />
          <error statusCode="403"
             path="%HOME%\site\wwwroot\errors\403.html" />
          <remove statusCode="404" />
          <error statusCode="404"
-            path="%HOME%\site\wwwroot\errors\404.html" />			
+            path="%HOME%\site\wwwroot\errors\404.html" />
+         <remove statusCode="500" />
+         <error statusCode="500"
+            path="%HOME%\site\wwwroot\errors\500.html" />
+         <remove statusCode="501" />
+         <error statusCode="501"
+            path="%HOME%\site\wwwroot\errors\501.html" />
+         <remove statusCode="502" />
+         <error statusCode="502"
+            path="%HOME%\site\wwwroot\errors\502.html" />
+         <remove statusCode="503" />
+         <error statusCode="503"
+            path="%HOME%\site\wwwroot\errors\503.html" />
+         <remove statusCode="520" />
+         <error statusCode="520"
+            path="%HOME%\site\wwwroot\errors\520.html" />
+         <remove statusCode="521" />
+         <error statusCode="521"
+            path="%HOME%\site\wwwroot\errors\521.html" />
+         <remove statusCode="533" />
+         <error statusCode="533"
+            path="%HOME%\site\wwwroot\errors\533.html" />
        </httpErrors>
    </system.webServer>
 </configuration>
